--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ path = "src/main.rs"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.11", features = ["json", "multipart"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "blocking", "rustls-tls"] }
 tokio = { version = "1.28", features = ["full"] }
 notify = "6.0"
 notify-debouncer-mini = "0.4"
@@ -26,3 +26,5 @@ sha2 = "0.10"
 eframe = "0.27"
 egui = "0.27"
 rfd = "0.12"
+image = { version = "0.24", default-features = false, features = ["png"] }
+open = "5.0"
