--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ name = "ballchasing-uploader"
 path = "src/main.rs"
 
 [dependencies]
+lazy_static = "1.5.0"
+log = "0.4.22"
+env_logger = "0.11.5"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
